--- a/Feign/one/build.gradle
+++ b/Feign/one/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    apt 'org.projectlombok:lombok:1.18.4'
 }
 
 dependencyManagement {
